--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>凌寒初见 | こんにちは</title>
   </head>
   <body>
@@ -12,6 +13,7 @@
       <strong>We're sorry but yandingBlog doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
+  <script src="https://use.typekit.net/ynr6osj.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </html>
