--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="keywords" content="blog, linghanchujian, code, ACG">
+  <meta name="description" content="凌寒初见 | こんにちは">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <title>凌寒初见 | こんにちは</title>
